Adjust tablet grid layout

--- a/appbase/app.css
+++ b/appbase/app.css
@@ -477,9 +477,17 @@ select {
 }
 
 @media (max-width: 1200px) {
+  .ac-grid {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
   .ac-tile--span-4,
   .ac-tile--span-6 {
     grid-column: span 6;
+  }
+
+  .ac-tile--span-4 {
+    grid-column: span 3;
   }
 }
 
